--- a/defaults.ini
+++ b/defaults.ini
@@ -16,3 +16,7 @@ threshold = 50
 compression_ratio = 5
 makeup_gain = 10
 knee_width = 10
+
+[feedback_simulation]
+sample_delay = 3
+feedback_gain = 0.8
