--- a/defaults.ini
+++ b/defaults.ini
@@ -20,3 +20,9 @@ knee_width = 10
 [feedback_simulation]
 sample_delay = 3
 feedback_gain = 0.8
+
+[filters]
+number_of_filters = 2
+filter_order = 5
+filter_min = 0.1
+filter_max = 0.9
